--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -15,6 +15,9 @@
 	 		<h3 class="logo">
 	 			<a href="/dashboard">QELT</a>
 	 		</h3>
+	 		{% if '/dashboard/question' in request.path %}
+	 			<a class="button" href="/dashboard/"> &lt; Back to dashboard</a>
+	 		{% endif %}
 	 	</div>
 	    <div class="two columns">
 	    	{% if user.is_authenticated %}
