--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -6,6 +6,8 @@
 	<meta name="description" content="Quadratic Equation Learning Tool">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/ext-all-debug.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.9.1/adapters/standalone-framework.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.9.1/highcharts.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/classic/theme-triton/resources/theme-triton-all-debug.css">
 	{% load staticfiles %}
     <script src="{% static 'javascript/base.js' %}"></script>
